Fix TOC Overlapping

--- a/templates/style.css
+++ b/templates/style.css
@@ -117,7 +117,7 @@ aside li {
 	list-style-type: none;
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1500px) {
 	aside {
 		position: fixed;
 		top: 0;
